2013-11-14  Albert Chu <chu11@llnl.gov>

	* ipmiconsole/, libipmiconsole/: Support solchannelsupport
	workaround option /
	IPMICONSOLE_WORKAROUND_SKIP_CHANNEL_PAYLOAD_SUPPORT workaround
	flag.
	
2013-11-13  Albert Chu <chu11@llnl.gov>

	* doc/freeipmi-bugs-issues-and-workarounds.txt,
	man/manpage-common-workaround-outofband-15-text.man: Document
	workaround for Quanta Winterfell.
	
2013-11-13  Albert Chu <chu11@llnl.gov>

	Update with Errata 5 changes to IPMI 2.0 spec.

	* libfreeipmi/cmds/ipmi-pef-and-alerting-cmds.c,
	libfreeipmi/include/freeipmi/templates/ipmi-pef-and-alerting-cmds-templates.h,
	ipmi-config/ipmi-config-category-pef-alert-string.c:
	Filter numbers are now 8 bit fields instead of 7 bit fields.

	* libfreeipmi/util/ipmi-cipher-suite-util.c,
	libfreeipmi/include/freeipmi/util/ipmi-cipher-suite-util.h: Cipher
	Suites 15-19 now fully confirmed, remove comments

	* etc/freeipmi_interpret_sensor.conf,
	etc/freeipmi_interpret_sel.conf,
	libipmimonitoring/ipmi_monitoring_bitmasks.h,
	libipmimonitoring/ipmi_monitoring_offsets.h,
	man/freeipmi_interpret_sel.conf.5.pre.in,
	man/freeipmi_interpret_sensor.conf.5.pre.in,
	libfreeipmi/interpret/ipmi-interpret-config-sel.c,
	libfreeipmi/interpret/ipmi-interpret-config-sensor.c,
	libfreeipmi/spec/ipmi-sensor-and-event-code-tables-spec.c,
	libfreeipmi/include/freeipmi/spec/ipmi-sensor-and-event-code-tables-spec.h:
	Support new offset for power supply sensor.

	* etc/freeipmi_interpret_sensor.conf,
	etc/freeipmi_interpret_sel.conf,
	libipmimonitoring/ipmi_monitoring_bitmasks.h,
	libipmimonitoring/ipmi_monitoring_offsets.h,
	man/freeipmi_interpret_sel.conf.5.pre.in,
	man/freeipmi_interpret_sensor.conf.5.pre.in,
	libfreeipmi/interpret/ipmi-interpret-config-sel.c,
	libfreeipmi/interpret/ipmi-interpret-config-sensor.c,
	libfreeipmi/spec/ipmi-sensor-and-event-code-tables-spec.c,
	libfreeipmi/include/freeipmi/spec/ipmi-sensor-and-event-code-tables-spec.h:
	Support new offset for os boot sensor.
